[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vastorbit"
# Keep this in sync with vastorbit/__init__.py (__version__).
version = "0.1.0b2"
description = "VAST Orbit simplifies data exploration, data cleaning, and machine learning in the VAST DataBase using in-database analytics."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.txt", "NOTICE.txt"]
authors = [
    { name = "Badr Ouali", email = "badr.ouali@outlook.fr" },
]
keywords = [
    "VAST",
    "python",
    "ml",
    "data science",
    "machine learning",
    "statistics",
    "database",
    "trino",
    "analytics",
    "big data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "graphviz>=0.20.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "trino>=0.328.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.2",
    "urllib3>=2.2.1",
]

[project.urls]
Homepage = "https://github.com/vast-data/Orbit"
Repository = "https://github.com/vast-data/Orbit"
Documentation = "https://vast-data.github.io/Orbit/"
Issues = "https://github.com/vast-data/Orbit/issues"

[project.optional-dependencies]
geo = [
    "descartes>=1.1.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]
parquet = [
    "pyarrow>=15.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]
all = [
    "descartes>=1.1.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyarrow>=15.0.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["vastorbit*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
vastorbit = [
    "*.csv",
    "*.json",
    "*.css",
    "*.html",
    "datasets/data/*.csv",
    "datasets/data/*.json",
]